frame/support/test/tests/pallet_ui/storage_not_storage_type.stderr
error: Invalid pallet::storage, expect ident: `StorageValue` or `StorageMap` or `StorageDoubleMap` in order to expand metadata, found `u8`
  --> $DIR/storage_not_storage_type.rs:19:16
   |
19 |     type Foo<T> = u8;
   |                   ^^
